fix: content-visibility

--- a/bklog/web/src/views/retrieve-v2/search-result-panel/log-result/log-rows.scss
+++ b/bklog/web/src/views/retrieve-v2/search-result-panel/log-result/log-rows.scss
@@ -107,11 +107,11 @@
     .bklog-row-observe {
       width: fit-content;
       min-width: 100%;
-      content-visibility: visible;
+      visibility: visible;
 
       &.is-pending {
         position: relative;
-        content-visibility: hidden;
+        visibility: hidden;
         will-change: auto;
 
         &::before {
